[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-market-search"
version = "0.1.0"
authors = [
  { name="Ata Can", email="atacanymc@gmail.com" },
]
description = "A unified Python client library to search Robolink, Robotistan, Robo90, and Direncnet."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "curl_cffi>=0.5.10"
]
license = { text = "MIT" }
keywords = ["robotistan", "robolink", "robo90", "direncnet", "search", "scraper", "api"]

[project.urls]
"Homepage" = "https://github.com/AtaCanYmc/robo-market-search"

[tool.setuptools.packages.find]
include = ["robo_market_search", "robo_market_search.*"]
